# read_from_stdin

./: .gitignore  AUTHORS  LICENSE  Makefile.am  README.md  configure.ac
src/: read_from_stdin.cc
